Bug 440389 - Kasts doesn't work well with some feeds
Summary: Kasts doesn't work well with some feeds
Status: RESOLVED FIXED
Alias: None
Product: kasts
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Flatpak Linux
: NOR normal
Target Milestone: ---
Assignee: bart
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-07-29 16:11 UTC by David Marzal
Modified: 2021-07-30 12:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Marzal 2021-07-29 16:11:00 UTC
SUMMARY
Some podcast are "broken"

STEPS TO REPRODUCE
1. Subscribe to https://podcastlinux.com/feed 
2. Try to download an episode
3. Also happen with others podcasts
https://podcastlinux.com/Linux-Express/feed
With this podcast some times works:
https://kdeexpress.gitlab.io/feed

OBSERVED RESULT
Error happened: Error::MediaDownload "https://podcastlinux.com/feed" "#134 Linux Connexion con David Marzal" 301 "Protocolo  desconocido"

EXPECTED RESULT
Episodes are downloadable every time

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  ArchLinux
KDE Plasma Version: 5.22.4
KDE Frameworks Version:  5.84
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Also happen in KDE Neon
Comment 1 bart 2021-07-30 06:47:35 UTC
Git commit 6eb13167f2e39cb0c43a5cec2cc68a0249b166d7 by Bart De Vries.
Committed on 30/07/2021 at 06:44.
Pushed by bdevries into branch 'master'.

Fix bug with feeds with multiple enclosures per entry

M  +4    -1    src/fetcher.cpp

https://invent.kde.org/plasma-mobile/kasts/commit/6eb13167f2e39cb0c43a5cec2cc68a0249b166d7
Comment 2 bart 2021-07-30 07:48:15 UTC
Thanks for reporting the bug.
It's fixed on master and will go into the next release (21.08).

This particular podcast has two links per episode (one mp3 and one ogg), which triggered a bug in the code.  Due to the nature of the bug, it has probably corrupted your database, so this needs to be fixed first.

First, note that the fix below will make you lose your currently saved play positions and queue items, so you might want to make a note of those first.

In order to fix this, you should *FIRST* remove this particular podcast feed (https://podcastlinux.com/feed).
Then, do "Export Podcasts" (button on the subscription page), then remove *ALL* podcasts until the subscription page is empty and then do "Import Podcasts".

Please make sure to not add this particular feed again until after you've upgraded to 21.08.  Otherwise it will corrupt your database again.
Comment 3 David Marzal 2021-07-30 08:03:14 UTC
(In reply to bart from comment #2)
> Thanks for reporting the bug.
> It's fixed on master and will go into the next release (21.08).
> 
> This particular podcast has two links per episode (one mp3 and one ogg),
> which triggered a bug in the code.  Due to the nature of the bug, it has
> probably corrupted your database, so this needs to be fixed first.
> 
> First, note that the fix below will make you lose your currently saved play
> positions and queue items, so you might want to make a note of those first.
> 
> In order to fix this, you should *FIRST* remove this particular podcast feed
> (https://podcastlinux.com/feed).
> Then, do "Export Podcasts" (button on the subscription page), then remove
> *ALL* podcasts until the subscription page is empty and then do "Import
> Podcasts".
> 
> Please make sure to not add this particular feed again until after you've
> upgraded to 21.08.  Otherwise it will corrupt your database again.

No problem doing a full wipe of the database as I was only doing some debugging for someone else.
Thanks for the quick fix, I will test when 21.08 it's out :)

On a side note:
Would it be possible to make Kasts choose the first enclosure as AntennaPod does? So the author of the feed can still promote the OGG variant over MP3.
Comment 4 bart 2021-07-30 08:13:04 UTC
That would make sense.  I guess that authors will put their preferred choice first...

BTW There's no particular reason why Kasts is picking the second one right now.  This bit of code was actually written to deal with feeds that would update the episode info to point to another audio file location in case the author would rewrite some entries/items.  In that case you would want to pick the latest.
Having two episode audio files defined in one item/entry just happens to trigger this same bit of code as well, so also picking the second one.

I'll look into it.  Shouldn't be too difficult to change that behaviour.
Comment 5 David Marzal 2021-07-30 10:58:14 UTC
(In reply to bart from comment #4)
> That would make sense.  I guess that authors will put their preferred choice
> first...
> 
> BTW There's no particular reason why Kasts is picking the second one right
> now.  This bit of code was actually written to deal with feeds that would
> update the episode info to point to another audio file location in case the
> author would rewrite some entries/items.  In that case you would want to
> pick the latest.
> Having two episode audio files defined in one item/entry just happens to
> trigger this same bit of code as well, so also picking the second one.
> 
> I'll look into it.  Shouldn't be too difficult to change that behaviour.

Great, thanks again. I'll test as soon 21.08 it's released (and lands into the Arch repos :))
Comment 6 bart 2021-07-30 12:23:54 UTC
Git commit 0b33c62a108f3789e679ee357284f4ea206320a5 by Bart De Vries.
Committed on 30/07/2021 at 12:20.
Pushed by bdevries into branch 'master'.

Select first enclosure if entry has multiple enclosure entries

Kasts can currently only handle one enclosure per entry.  In case an
entry/item has multiple enclosures, it's probably safe to assume that the
first one is the one that's preferred by the author.

M  +5    -2    src/fetcher.cpp

https://invent.kde.org/plasma-mobile/kasts/commit/0b33c62a108f3789e679ee357284f4ea206320a5