Fix bug with feeds with multiple enclosures per entry

BUG: 440389